Added AJAX Delete call - Currently not working

--- a/app/index.html
+++ b/app/index.html
@@ -80,12 +80,25 @@
 
 <script id="tableInfo" type="text/template">
     <tr>
-        <td><%= firstName %></td>
-        <td><%= lastName %></td>
-        <td><%= phone %></td>
-        <td><%= email %></td>
-        <td><%= job %></td>
-        <td><a class="update" href="#">Update</a><a class="delete" id="id<%= vol_ID %>" href="#">Delete</a></td>
+        <td>
+            <%= firstName %>
+        </td>
+        <td>
+            <%= lastName %>
+        </td>
+        <td>
+            <%= phone %>
+        </td>
+        <td>
+            <%= email %>
+        </td>
+        <td>
+            <%= job %>
+        </td>
+        <td>
+            <a class="update" href="#">Update</a>
+            <a class="delete" id="id<%= vol_ID %>" href="#">Delete</a>
+        </td>
     </tr>
 </script>
 
